# veosinfo_source

./: Makefile.am  NEWS  README  autogen.sh  configure.ac  ve_sock.c  ve_sock.h  veos_RPM.proto  veosinfo.c  veosinfo.h.in  veosinfo.spec  veosinfo_comm.h.in  veosinfo_internal.h  veosinfo_log.c  veosinfo_log.h
debian/: control  copyright  rules.in  veosinfo-dev.install.in  veosinfo.install.in
